--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async": "^2.1.4",
     "cheerio": "^0.22.0",
     "diskdb": "^0.1.17",
+    "json2csv": "^3.7.3",
     "request": "^2.79.0"
   }
 }
